@@ -2,6 +2,7 @@
  - Add check_length().
  - Add example for check_number_of_items().
  - Add test for check_isa(). Testing of another object.
+ - Improve description for check_number_of_items().
 
 0.03 2020-12-11T14:10:51+01:00
  - Add support for '+10' syntax of number to check_number().
